# coins-etl

./: .gitignore  README.md  class_index.html  function_index.html  index.html  pyproject.toml  status.json  z_197790968570823d_coins_market_chart_api_response_py.html  z_197790968570823d_coins_py.html  z_197790968570823d_coins_trending_api_response_py.html  z_197790968570823d_market_chart_py.html  z_45fa4dfa6d22ebde___init___py.html  z_75f72d28b36d40ec_analyze_bitcoin_prices_py.html  z_75f72d28b36d40ec_trending_coins_py.html  z_80873ad108835cd8_serve_py.html  z_83fb7a5244cf7789_db_py.html  z_83fb7a5244cf7789_math_py.html  z_83fb7a5244cf7789_notification_py.html  z_d85b5e27f0686b9e_extract_py.html  z_d85b5e27f0686b9e_notify_py.html  z_d85b5e27f0686b9e_save_py.html  z_d85b5e27f0686b9e_transform_py.html
.github/workflows/: test-coverage.yml
tests/: fixtures.py
tests/flows/: test_analyze_bitcoin_prices.py  test_trending_coins.py
tests/mock/: market_chart.json  trending_endpoint.json
tests/tasks/: test_extract_tasks.py  test_notify_tasks.py  test_save_tasks.py  test_transform_tasks.py  test_trasnform_tasks.py
workflow/: serve.py
workflow/config/: __init__.py  settings.py
workflow/flows/: analyze_bitcoin_prices.py  trending_coins.py
workflow/schemas/: coins.py  coins_market_chart_api_response.py  coins_trending_api_response.py  market_chart.py
workflow/tasks/: extract.py  notify.py  save.py  transform.py
workflow/utils/: db.py  math.py  notification.py
