[tool.poetry]
name = "storm-teste"
version = "0.1.0"
description = ""
authors = ["Lucas Muller Gomes <lmgomes96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.19.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
